Fix Stream.toList() Java 16+ API left over from the Java 11 downgrade